k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentimentizer
  labels:
    app: sentimentizer
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: sentimentizer
